--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@auth0/auth0-react": "^1.3.0",
-    "algoliasearch": "^4.8.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
@@ -19,6 +20,7 @@
     "gatsby-transformer-sharp": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1"
