--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "reinstall-node-modules": "^2.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
